refactor: Cars 클래스의 생성자 세부내용을 변경한다
변경 내용:
방어적 복사를 활용해 cars 변수를 초기화한다.